solved overflow problems in explorer

--- a/backend/App/client/src/components/BasicModal/BasicModal.scss
+++ b/backend/App/client/src/components/BasicModal/BasicModal.scss
@@ -13,11 +13,13 @@
 
     &.horizontal {
       flex-direction: row;
+      justify-content: space-evenly;
     }
 
     .item {
       margin: variables.$s-margin;
       flex: 1;
+      max-width: 128px;
     }
   }
 
